# mpc

./: .gitignore  Cargo.toml  Dockerfile  flake.nix  justfile  setup.sh
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/workflows/: canton.yml  deploy-dev-contract.yml  deploy-dev-nodes.yml  deploy-prod-nodes.yml  integration.yml  k6-ci-loadtest.yml  nightly.yml  prod-compatibility.yml  unit.yml
chain-signatures/chain-integration-core/: Cargo.toml
chain-signatures/chain-integration-core/src/: indexer.rs  lib.rs  publish.rs  state.rs  telemetry.rs
chain-signatures/chain-integration-core/src/utils/: mod.rs
chain-signatures/contract/: Cargo.toml
chain-signatures/contract-eth/: hardhat.config.js  package-lock.json  package.json
chain-signatures/contract-eth/scripts/: verifyDeployment.js
chain-signatures/contract-sol/: Cargo.toml
chain-signatures/contract-sol/src/: lib.rs
chain-signatures/contract/src/: lib.rs  primitives.rs  state.rs
chain-signatures/contract/src/config/: impls.rs  mod.rs
chain-signatures/contract/src/errors/: impls.rs  mod.rs
chain-signatures/contract/tests/: common.rs  sign.rs  updates.rs  user_views.rs  vote.rs
chain-signatures/crypto/: Cargo.toml
chain-signatures/crypto/src/: kdf.rs  lib.rs  types.rs
chain-signatures/indexer-core/: Cargo.toml
chain-signatures/indexer-core/src/: lib.rs  telemetry.rs
chain-signatures/indexer-core/src/utils/: hashing.rs  retry.rs
chain-signatures/node/: Cargo.toml
chain-signatures/node/src/: backlog.rs  checkpoint_consensus.rs  cli.rs  config.rs  indexer.rs  indexer_common.rs  indexer_eth.rs  indexer_hydration.rs  indexer_sol.rs  kdf.rs  lib.rs  logs.rs  metrics.rs  node_client.rs  read_respond.rs  respond_bidirectional.rs  rpc.rs  sign_bidirectional.rs  solana_client.rs  types.rs  util.rs
chain-signatures/node/src/backlog/: consensus.rs  mod.rs  selection.rs
chain-signatures/node/src/cli/: mod.rs
chain-signatures/node/src/cli/args/: canton.rs  ethereum.rs  hydration.rs  mod.rs  solana.rs
chain-signatures/node/src/indexer_canton/: auth.rs  config.rs  contracts.rs  jwt.rs  ledger_api.rs  mod.rs  request_id.rs  signature.rs  stream.rs
chain-signatures/node/src/indexer_eth/: abi.rs  client.rs  config.rs  indexer_eth_direct_rpc.rs  indexer_eth_helios.rs  mod.rs  test_utils.rs
chain-signatures/node/src/indexer_hydration/: config.rs  mod.rs
chain-signatures/node/src/indexer_hydration/artifacts/: hydration_metadata.scale
chain-signatures/node/src/indexer_sol/: client.rs  config.rs  mod.rs
chain-signatures/node/src/mesh/: connection.rs  mod.rs  state.rs
chain-signatures/node/src/metrics/: hardware.rs  indexers.rs  messaging.rs  mod.rs  nodes.rs  protocols.rs  requests.rs  storage.rs  telemetry.rs
chain-signatures/node/src/protocol/: consensus.rs  cryptography.rs  mod.rs  posit.rs  presignature.rs  signature.rs  state.rs  test_setup.rs  triple.rs
chain-signatures/node/src/protocol/contract/: mod.rs  primitives.rs
chain-signatures/node/src/protocol/message/: filter.rs  mod.rs  sub.rs  types.rs
chain-signatures/node/src/protocol/sync/: mod.rs
chain-signatures/node/src/rpc/: canton.rs  ethereum.rs  hydration.rs  mod.rs  near.rs  solana.rs  test_utils.rs
chain-signatures/node/src/storage/: checkpoint_storage.rs  mod.rs  presignature_storage.rs  protocol_storage.rs  secret_storage.rs  triple_storage.rs
chain-signatures/node/src/stream/: mod.rs  ops.rs  pipeline.rs
chain-signatures/node/src/util/: mod.rs  retry.rs
chain-signatures/node/src/web/: debug.rs  error.rs  mock.rs  mod.rs
chain-signatures/primitives/: Cargo.toml
chain-signatures/primitives/src/: backlog.rs  bidirectional.rs  bytes.rs  chain.rs  crypto.rs  events.rs  lib.rs  requests.rs  traits.rs
chain-signatures/test-contracts/: Cargo.toml
infra/loadtests/: k6-load-test.js
infra/partner-mainnet/: terraform-mainnet-example.tfvars
infra/scripts/generate_keys/: Cargo.toml
infra/scripts/generate_keys/src/: main.rs
integration-tests/: Cargo.toml  README.md
integration-tests/benches/: sign.rs  store.rs
integration-tests/fixtures/canton/: README.md  daml-vault-0.0.1.dar  signet-fee-amulet-0.0.1.dar  signet-signer-v1-0.0.1.dar
integration-tests/src/: canton.rs  canton_auth.rs  commands.rs  containers.rs  eth.rs  execute.rs  lib.rs  local.rs  main.rs  utils.rs
integration-tests/src/actions/: mod.rs  sign.rs  wait.rs  wait_for.rs
integration-tests/src/cluster/: mod.rs  spawner.rs
integration-tests/src/mpc_fixture/: 3_nodes.json  3_nodes_2_threshold.json  5_nodes.json  builder.rs  fixture_interface.rs  fixture_tasks.rs  input.rs  message_collector.rs  mock_chain.rs  mock_stream.rs  mod.rs
integration-tests/tests/cases/: canton.rs  canton_stream.rs  chains.rs  checkpoint.rs  compat.rs  ethereum.rs  ethereum_stream.rs  helpers.rs  mod.rs  mpc.rs  mpc_with_stream.rs  solana.rs  solana_stream.rs  state_sync.rs  store.rs  sync.rs
scripts/: build-compat-binaries.sh  prod-compat-versions.json  test-prod-compat.sh
