[workspace]
members = [
    "chain-signatures/crypto",
    "chain-signatures/contract",
    "chain-signatures/contract-sol",
    "chain-signatures/keys",
    "chain-signatures/node",
    "chain-signatures/primitives",
    "integration-tests"
]
exclude = ["infra/scripts/generate_keys"]
resolver = "2"

[workspace.package]
version = "1.11.0"

[workspace.dependencies]
alloy = { version = "=1.0.38", features = ["contract", "json"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }
borsh = "1.5.3"
cait-sith = { git = "https://github.com/sig-net/cait-sith", rev = "9f34e8c", features = ["k256"] }
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
deadpool-redis = "0.18.0"
hex = "0.4.3"
hyper = { version = "0.14", features = ["full"] }
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
semver = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1"
sha3 = "0.10.8"
thiserror = "1"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "env-filter",
    "registry",
    "std",
    "fmt",
] }
url = { version = "2.4.0", features = ["serde"] }
ethabi = "18.0.0"
anchor-client = { version = "0.31.0", features = ["async"] }
anchor-lang = "0.31.0"
solana-sdk = "2.2.2"
solana-transaction-status = "2.2.6"
alloy-dyn-abi = "1.4.1"
ethers-core = "2.0.13"
secp256k1 = "0.28.2"
rlp = "0.5"
alloy-consensus = { version = "1.0.38", features = ["serde"] }
alloy-primitives = "1.4.1"
alloy-json-abi = "1.4.1"
alloy-rlp = "0.3.12"
solana-client = "2.2.7"
futures-util = "0.3.31"
parity-scale-codec = { version = "3", features = ["derive"] }

near-account-id = "1.0.0"
near-primitives = "0.26.0"
near-sdk = { version = "5.6.0", features = ["unit-testing", "unstable"] }

mpc-contract = { path = "./chain-signatures/contract" }
mpc-crypto = { path = "./chain-signatures/crypto" }
mpc-keys = { path = "./chain-signatures/keys" }
mpc-node = { path = "./chain-signatures/node" }
mpc-primitives = { path = "./chain-signatures/primitives" }
signet-program = { path = "./chain-signatures/contract-sol" }

[patch.crates-io]
# TODO: trigger Cargo.lock update for x25519-dalek once they release.
# This fixes https://rustsec.org/advisories/RUSTSEC-2024-0344 by pointing to a commit that includes the fix.
# This fix has yet to be propagated to crates.io so we will patch it instead.
x25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "5b7082bbc8e0b2106ab0d956064f61fa0f393cdc" }

# big optimization even in test builds for math heavy crates
[profile.dev.package.curve25519-dalek]
opt-level = 3