[package]
name = "mpc-node"
version.workspace = true
edition = "2021"

[[bin]]
name = "mpc-node"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = "0.7.9"
axum-extra = "0.9.6"
chrono = "0.4.24"
google-datastore1 = "=5.0.4"
google-secretmanager1 = "5"
hkdf = "0.12.4"
highway = "1.1.0"
http = "1.1.0"
hyper-rustls = { version = "=0.24", features = ["http2"] }
local-ip-address = "0.5.4"
lru = "0.13.0"
mime = "0.3.17"
prometheus = "0.14.0"
redis = "0.27.2"
sysinfo = "0.32.0"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing-stackdriver = "0.10.0"
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.29.0", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.29.0" }
opentelemetry_sdk = { version = "0.29.0", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-appender-tracing = "0.29.1"
alloy-signer-local = "1.0.38"
alloy-sol-types = "1.4.1"
helios = { git = "https://github.com/a16z/helios", rev = "e1f9a50f73d7af6f6ae4acf2b663d04aab6adb19", optional = true }
ed25519-zebra = { version = "4.1", default-features = false, features = ["alloc"] }
subxt = { version = "0.44", default-features = false, features = ["jsonrpsee","native","unstable-light-client"] }
sp-core = { version = "38.1", default-features = false, features = ["std"] }
sp-runtime = { version = "44.0.0", default-features = false, features = ["std"] }
sp-trie = { version = "41.1.0", default-features = false, features = ["std"] }
sp-state-machine = { version = "0.48", default-features = false, features = ["std"] }
subxt-signer = "0.44"

# workspace dependencies
alloy.workspace = true
anyhow.workspace = true
borsh.workspace = true
borsh_sol = { package = "borsh", version = "0.10.4" } # solana anchor requires borsh 0.10
cait-sith.workspace = true
ciborium.workspace = true
clap.workspace = true
deadpool-redis.workspace = true
hex.workspace = true
hyper.workspace = true
k256.workspace = true
rand.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde-aux = { version = "4", default-features = false }
serde_bytes.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-client.workspace = true
futures-util.workspace = true
jsonwebtoken.workspace = true
p256.workspace = true
parity-scale-codec.workspace = true
tokio-tungstenite.workspace = true

near-account-id.workspace = true
near-crypto = "0.26.0"
near-fetch = "0.6.0"
near-primitives.workspace = true
near-sdk.workspace = true

mpc-contract.workspace = true
mpc-crypto.workspace = true
mpc-keys.workspace = true
mpc-primitives.workspace = true
signet-program.workspace = true

alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
secp256k1.workspace = true
rlp.workspace = true

maud = { version = "0.27.0", optional = true }

[dev-dependencies]
mockito = "1.7.0"
test-log = { version = "0.2.12", features = ["log", "trace"] }

[features]
default = []
helios = ["dep:helios"]
# utilized for benchmarking the node:
bench = []
# utilized by "integration-tests" package:
test-feature = []
# Show a debug page
debug-page = ["maud"]
